--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "src",
     "index.ts"
   ],
-  "keywords": [
-    "astro-component"
-  ],
   "scripts": {},
-  "devDependencies": {
-    "astro": "^5.0.0-beta.3"
-  },
   "peerDependencies": {
     "astro": "^4.0.0 || ^5.0.0"
   },
-  "dependencies": {
-    "@astrojs/check": "^0.9.4",
+  "devDependencies": {
+    "@types/node": "^22.7.4",
+    "astro": "^5.0.0-beta.3",
     "typescript": "^5.6.2"
-  }
+  },
+  "keywords": [
+    "astro",
+    "astro-integration",
+    "pocketbase",
+    "withastro"
+  ]
 }
