--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "astro-integration-pocketbase",
   "version": "0.0.1",
+  "license": "MIT",
+  "author": "Luis Wolf <development@pawcode.de> (https://pawcode.de)",
+  "homepage": "https://github.com/pawcoding/astro-integration-pocketbase",
   "type": "module",
   "exports": {
     ".": "./index.ts"
@@ -9,14 +12,23 @@
     "src",
     "index.ts"
   ],
-  "scripts": {},
+  "scripts": {
+    "lint": "npx eslint",
+    "prepare": "husky"
+  },
   "peerDependencies": {
     "astro": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "@stylistic/eslint-plugin": "^2.9.0",
     "@types/node": "^22.7.4",
     "astro": "^5.0.0-beta.3",
-    "typescript": "^5.6.2"
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0",
+    "husky": "^9.1.6",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   },
   "keywords": [
     "astro",
