--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,7 @@
 # build output
 dist/
 .eslintcache
+CHANGELOG.md
 # generated types
 .astro/
 
@@ -23,3 +24,7 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# misc
+.husky/
+.prettierignore
