--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "index.ts"
   ],
   "scripts": {
-    "lint": "npx eslint",
+    "lint": "npx eslint --cache",
+    "lint:fix": "npx eslint --cache --fix",
+    "format": "npx prettier . --write --cache",
+    "format:check": "npx prettier . --check --cache",
     "prepare": "husky"
   },
   "peerDependencies": {
@@ -29,9 +32,13 @@
     "@types/node": "^22.13.4",
     "astro": "^5.3.0",
     "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
     "eventsource": "^3.0.5",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
+    "prettier": "^3.5.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-packagejson": "^2.5.8",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
   },
