build(git): add lint-staged

--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "astro-integration-pocketbase",
   "version": "1.4.0",
   "description": "An Astro integration to support developers working with astro-loader-pocketbase.",
+  "keywords": [
+    "astro",
+    "astro-integration",
+    "pocketbase",
+    "withastro",
+    "devtools",
+    "dev-overlay",
+    "dev-toolbar",
+    "tooling"
+  ],
+  "homepage": "https://github.com/pawcoding/astro-integration-pocketbase",
   "license": "MIT",
   "author": "Luis Wolf <development@pawcode.de> (https://pawcode.de)",
-  "homepage": "https://github.com/pawcoding/astro-integration-pocketbase",
   "type": "module",
   "exports": {
     ".": "./index.ts"
@@ -14,15 +24,11 @@
     "index.ts"
   ],
   "scripts": {
-    "lint": "npx eslint --cache",
-    "lint:fix": "npx eslint --cache --fix",
     "format": "npx prettier . --write --cache",
     "format:check": "npx prettier . --check --cache",
+    "lint": "npx eslint --cache",
+    "lint:fix": "npx eslint --cache --fix",
     "prepare": "husky"
-  },
-  "peerDependencies": {
-    "astro": "^5.0.0",
-    "eventsource": "^3.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
@@ -36,20 +42,15 @@
     "eventsource": "^3.0.5",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "prettier": "^3.5.1",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-packagejson": "^2.5.8",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
   },
-  "keywords": [
-    "astro",
-    "astro-integration",
-    "pocketbase",
-    "withastro",
-    "devtools",
-    "dev-overlay",
-    "dev-toolbar",
-    "tooling"
-  ]
+  "peerDependencies": {
+    "astro": "^5.0.0",
+    "eventsource": "^3.0.0"
+  }
 }
