ci(release): only run release in main repository
Prevents GitHub Actions from failing in forks, where they cannot be
published to NPM

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,6 +47,7 @@ jobs:
 
       # Create release
       - name: 🚀 Create release
+        if: github.repository == 'pawcoding/astro-integration-pocketbase'
         id: release
         uses: cycjimmy/semantic-release-action@v4
         env:
