--- a/package.json
+++ b/package.json
@@ -33,29 +33,25 @@
   "scripts": {
     "format": "npx prettier . --write --cache",
     "format:check": "npx prettier . --check --cache",
-    "lint": "npx eslint --cache",
-    "lint:fix": "npx eslint --cache --fix",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix",
     "prepare": "husky",
     "typecheck": "npx tsc --noEmit"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/js": "^9.30.1",
-    "@stylistic/eslint-plugin": "^5.1.0",
     "@types/node": "^22.14.1",
     "astro": "^5.11.0",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.5",
     "eventsource": "^4.0.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "oxlint": "^1.8.0",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-packagejson": "^2.5.18",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1"
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "astro": "^5.0.0",
