ci(*): enable corepack

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,10 +32,13 @@ jobs:
           node-version: "lts/*"
           cache: "npm"
 
+      # Enable corepack
+      - name: ⚙️ Enable corepack
+        run: corepack enable && corepack enable npm
+
       # Install dependencies
       - name: 📦 Install dependencies
-        run: |
-          npm ci
+        run: npm ci
 
       # Lint code
       - name: 🧹 Lint code
