build(deps): update dependencies and actions

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -32,8 +32,8 @@
     "eslint/no-empty-function": "warn",
     "eslint/no-eq-null": "error",
     "eslint/no-iterator": "error",
+    "eslint/no-param-reassign": "warn",
     "eslint/no-proto": "error",
-    "eslint/no-unused-expressions": "warn",
     "eslint/no-var": "error",
     "import/no-commonjs": "error",
     "import/no-cycle": "error",
@@ -131,6 +131,7 @@
     "unicorn/consistent-empty-array-spread": "warn",
     "unicorn/explicit-length-check": "warn",
     "unicorn/new-for-builtins": "warn",
+    "unicorn/no-array-callback-reference": "error",
     "unicorn/no-instanceof-array": "error",
     "unicorn/no-negation-in-equality-check": "warn",
     "unicorn/no-static-only-class": "error",
@@ -141,12 +142,14 @@
     "unicorn/no-useless-switch-case": "warn",
     "unicorn/prefer-array-flat": "error",
     "unicorn/prefer-array-some": "warn",
+    "unicorn/prefer-at": "warn",
     "unicorn/prefer-date-now": "warn",
     "unicorn/prefer-math-min-max": "warn",
     "unicorn/prefer-math-trunc": "error",
     "unicorn/prefer-string-replace-all": "warn",
     "unicorn/prefer-string-slice": "warn",
     "unicorn/prefer-type-error": "warn",
+    "unicorn/require-module-specifiers": "error",
     // Style
     "eslint/arrow-body-style": "warn",
     "eslint/curly": "error",
