--- a/package.json
+++ b/package.json
@@ -36,12 +36,21 @@
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
     "prepare": "husky",
+    "test": "vitest run",
+    "test:e2e": "vitest run $(find test -name '*.e2e-spec.ts')",
+    "test:e2e:pocketbase": "npm run test:e2e:setup && ./.pocketbase/pocketbase serve",
+    "test:e2e:setup": "./scripts/setup-pocketbase.sh",
+    "test:e2e:watch": "vitest watch $(find test -name '*.e2e-spec.ts')",
+    "test:unit": "vitest run $(find test -name '*.spec.ts')",
+    "test:unit:watch": "vitest watch $(find test -name '*.spec.ts')",
+    "test:watch": "vitest watch",
     "typecheck": "npx tsc --noEmit"
   },
   "devDependencies": {
     "@commitlint/cli": "20.1.0",
     "@commitlint/config-conventional": "20.0.0",
     "@types/node": "24.9.1",
+    "@vitest/coverage-v8": "^4.0.3",
     "astro": "5.15.1",
     "eventsource": "4.0.0",
     "globals": "16.4.0",
@@ -51,7 +60,8 @@
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-packagejson": "2.5.19",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vitest": "4.0.3"
   },
   "peerDependencies": {
     "astro": "^5.0.0",
