build(deps): add vitest ui

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@commitlint/cli": "20.1.0",
     "@commitlint/config-conventional": "20.0.0",
     "@types/node": "24.9.1",
-    "@vitest/coverage-v8": "^4.0.3",
+    "@vitest/coverage-v8": "4.0.3",
+    "@vitest/ui": "4.0.3",
     "astro": "5.15.1",
     "eventsource": "4.0.0",
     "globals": "16.4.0",
