--- a/package.json
+++ b/package.json
@@ -33,21 +33,22 @@
   "scripts": {
     "format": "npx prettier . --write --cache",
     "format:check": "npx prettier . --check --cache",
-    "lint": "oxlint",
-    "lint:fix": "oxlint --fix",
+    "lint": "oxlint --type-aware",
+    "lint:fix": "oxlint --type-aware --fix",
     "prepare": "husky",
     "typecheck": "npx tsc --noEmit"
   },
   "devDependencies": {
     "@commitlint/cli": "20.1.0",
     "@commitlint/config-conventional": "20.0.0",
-    "@types/node": "24.9.1",
-    "astro": "5.15.1",
+    "@types/node": "24.9.2",
+    "astro": "5.15.3",
     "eventsource": "4.0.0",
     "globals": "16.4.0",
     "husky": "9.1.7",
     "lint-staged": "16.2.6",
-    "oxlint": "1.24.0",
+    "oxlint": "1.25.0",
+    "oxlint-tsgolint": "0.4.0",
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "4.3.0",
     "prettier-plugin-packagejson": "2.5.19",
