build(lint): update ruleset

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -120,6 +120,7 @@
     "eslint/no-throw-literal": "error",
     "eslint/symbol-description": "error",
     "typescript/ban-ts-comment": "warn",
+    "typescript/no-deprecated": "warn",
     "typescript/no-unsafe-argument": "error",
     "typescript/no-unsafe-assignment": "error",
     "typescript/no-unsafe-call": "error",
@@ -203,7 +204,8 @@
     "unicorn/no-console-spaces": "warn",
     "unicorn/no-null": "error",
     "unicorn/no-unreadable-array-destructuring": "warn",
-    "unicorn/prefer-includes": "warn",
+    "unicorn/no-useless-collection-argument": "warn",
+    "unicorn/prefer-includes": "error",
     "unicorn/prefer-logical-operator-over-ternary": "error",
     "unicorn/prefer-negative-index": "warn",
     "unicorn/prefer-object-from-entries": "error",
